--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,11 +4,6 @@
 
 @charset "utf-8";
 
-@font-face {
-    font-family: 'paybooc-Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&family=Ubuntu:ital@1&display=swap');
